--- a/gapl/src/index.html
+++ b/gapl/src/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>gapl</title>
+    <title>Karan</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      .p-overflow-hidden {
+        overflow: revert !important;
+      }
+    </style>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
